--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@mapbox/mapbox-gl-directions",
-  "version": "4.1.0",
+  "name": "vanessa-mapbox-gl-directions",
+  "version": "4.1.1",
   "description": "A mapboxgl plugin for the Mapbox Directions API",
   "main": "./src/index.js",
   "browserify": {
@@ -14,15 +14,15 @@
   },
   "scripts": {
     "prepublish": "npm run build",
-    "start": "NODE_ENV=development budo example/index.js:example/bundle.js --live",
-    "build": "NODE_ENV=production mkdir -p dist && browserify -s MapboxDirections src/index.js > dist/mapbox-gl-directions.js && cp src/mapbox-gl-directions.css dist",
-    "test": "NODE_ENV=test npm run lint && browserify test/index.js | smokestack -b firefox | tap-status",
+    "start": "cross-env NODE_ENV=development budo example/index.js:example/bundle.js --live",
+    "build": "cross-env NODE_ENV=production mkdir -p dist && browserify -s MapboxDirections src/index.js > dist/mapbox-gl-directions.js && cp src/mapbox-gl-directions.css dist",
+    "test": "cross-env NODE_ENV=test npm run lint && browserify test/index.js | smokestack -b firefox | tap-status",
     "docs": "documentation build src/directions.js --shallow --format=md > API.md",
     "lint": "eslint --no-eslintrc -c .eslintrc src"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/mapbox/mapbox-gl-directions.git"
+    "url": "git+ssh://git@github.com:Hassan950/mapbox-gl-directions.git"
   },
   "keywords": [
     "directions",
@@ -30,7 +30,7 @@
     "osm",
     "gl"
   ],
-  "author": "Mapbox",
+  "author": "Hassan",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mapbox/mapbox-gl-directions/issues"
@@ -43,6 +43,7 @@
     "brfs": "^1.4.1",
     "browserify": "^13.0.1",
     "budo": "^8.3.0",
+    "cross-env": "^7.0.3",
     "documentation": "^4.0.0-beta16",
     "eslint": "^2.13.1",
     "insert-css": "^2.0.0",
@@ -69,5 +70,9 @@
     "suggestions": "1.3.3",
     "turf-extent": "^1.0.4",
     "xtend": "4.0.1"
+  },
+  "directories": {
+    "example": "example",
+    "test": "test"
   }
 }
